<resources>
    <string name="blacklist_id">用户ID</string>
    <string name="blacklist">黑名单</string>
    <string name="join_in_blacklist">加入黑名单</string>
    <string name="add_blacklist">添加屏蔽用户</string>
    <string name="blacklist_tip">该屏蔽系统会在 EHentai 网站评论系统的基础上继续屏蔽评论。\n\n评论者屏蔽项：排除该评论者上传的评论。这会使加载画廊列表花费更多时间。</string>
    <string name="blacklist_text">屏蔽用户</string>
    <string name="delete_blacklist">取消屏蔽用户“%s”？</string>
    <string name="blacklist_reason_text">屏蔽原因</string>
    <string name="settings_eh_blacklist">评论黑名单</string>
    <string name="settings_eh_blacklist_summary">根据账号名称屏蔽他人评论</string>
    <string name="settings_advanced_dns_over_http_title">安全 DNS（DoH）</string>
    <string name="settings_advanced_dns_over_http_summary">解决某些地区的 DNS 污染问题</string>
    <string name="settings_advanced_domain_fronting_title">域名前置</string>
    <string name="settings_advanced_domain_fronting_summary">绕过 SNI 封锁</string>
    <string name="settings_advanced_url_replace_title">url伪装,需关闭SNI</string>
    <string name="settings_advanced_url_replace_summary">url伪装(需重启，开启后账户功能失效)</string>
    <string name="settings_about_donate_guide">支持指南</string>
    <string name="share_favorites_dialog_title">分享收藏</string>
    <string name="share_favorites_dialog_message">分享收藏 %s ？</string>
    <string name="add_favorites_dialog_message">添加收藏 %s ？</string>
    <string name="settings_advanced_built_ex_hosts_title">内置exhentai hosts.txt</string>
    <string name="settings_advanced_built_ex_hosts_summary">应用提供的主机到IP的映射\n可被自定义 hosts.txt 覆盖</string>
    <string name="network_remind">检测到开启了vpn，请注意您的网络安全</string>
    <string name="no_blicklist">这里是黑名单</string>
    <string name="app_name">EhViewer</string>
    <string name="site_e" translatable="false">e-hentai</string>
    <string name="site_ex" translatable="false">exhentai</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="homepage">Homepage</string>
    <string name="subscription">Subscription</string>
    <string name="whats_hot">What\'s hot</string>
    <string name="top_lists">Top Lists</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="added_to_translation_queue">Added to translation queue</string>
    <string name="already_in_translation_queue">Already in translation queue</string>
    <string name="translation_config">Translation Config</string>
    <string name="translation_config_test">Test Connection</string>
    <string name="translation_base_host">Server Host</string>
    <string name="translation_base_port">Server Port</string>
    <string name="translation_queue">Translation Queue</string>
    <string name="translation_delete_all_records">删除所有记录</string>
    <string name="translation_delete_all_records_confirm">确认删除所有记录？</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="stub" translatable="false">Stub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recaptcha">Recaptcha (Not required)</string>
    <string name="recaptcha_none">Tap here</string>
    <string name="recaptcha_loading">Loading…</string>
    <string name="recaptcha_failure">Failed</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_via_webview">Sign in via WebView</string>
    <string name="sign_in_via_cookies">Sign in via cookies</string>
    <string name="display_name_dialog_title">Enter Display Name</string>
    <string name="display_name">Display name</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="default_display_name">Little Hippo</string>
    <string name="cookie_explain">A cookie is a small piece of data stored in web browser. Google it if you don\'t know what it is or how to get it.\n\nPlease enter special cookies to sign in.</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="waring">Warning</string>
    <string name="wrong_cookie_warning">It seems that the cookies you entered are wrong. You\'d better check them.</string>
    <string name="i_will_check_it">I will check it</string>
    <string name="i_dont_think_so">I don\'t think so</string>
    <string name="found_cookies">Found cookies!</string>
    <string name="invalid_download_location">It seems download location is not available. Please set it in Settings.</string>
    <string name="cellular_network_warning">Connected to cellular networks</string>
    <string name="clipboard_gallery_url_snack_message">There is a gallery url in the clipboard</string>
    <string name="clipboard_gallery_url_snack_action">View</string>
    <string name="image_save_success">Picture saved successfully</string>
    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>
    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>
    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_unknown_host">Unknown host</string>
    <string name="error_redirection">Too many redirections</string>
    <string name="error_socket">Network error</string>
    <string name="error_unknown">Weird</string>
    <string name="error_cant_find_activity">Can\'t find the application</string>
    <string name="error_cannot_parse_the_url">Can\'t parse the url</string>
    <string name="error_not_folder_path">Not folder path</string>
    <string name="error_no_provider">No provider</string>
    <string name="error_decoding_failed">Decoding failed</string>
    <string name="error_not_found">Not found</string>
    <string name="error_empty">Empty</string>
    <string name="error_invalid_archive">Invalid archive</string>
    <string name="error_reading_failed">Reading Failed</string>
    <string name="error_out_of_range">Out of range</string>
    <string name="error_write_failed">Write failed</string>
    <string name="error_parse_error">Parse error</string>
    <string name="error_509">509</string>
    <string name="error_invalid_url">Invalid url</string>
    <string name="error_get_ptoken_error">Get pToken error</string>
    <string name="error_cant_create_temp_file">Couldn\'t create temp file</string>
    <string name="error_cant_save_image">Can\'t save image</string>
    <string name="error_save_image_existed">Image already exists</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_please_login_first">Please login first</string>
    <string name="error_empty_html">Empty page</string>
    <string name="error_cant_get_image">Can\'t get image</string>
    <string name="kokomade_tip">Settings->Eh->Gallery Site->e-hentai</string>
    <string name="app_waring">The content of this application is from the Internet. Some of it may do physical or mental harm to you. You have learnt the risks above and would like to undertake them.</string>
    <string name="error_username_cannot_empty">Username cannot be an empty string</string>
    <string name="error_password_cannot_empty">Password cannot be an empty string</string>
    <string name="guest_mode">继续访客模式</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in_failed_tip">If this issue continues, try \"Sign in via WebView\" or \"Sign in via cookies\"</string>
    <string name="sign_in_failed_plain">Perhaps it is a mistake due to website update or something wrong happened. You may try sign in via WebView or enter cookie or skip signing in under sign in button. But you may be a "Sad Panda" after skipping signing in. Try "Sign in via cookies" first if you had signed in on 0.6.x version.</string>
    <string name="press_twice_exit">Press twice to exit</string>
    <string name="content_layout_restore_tip">Tap to retry</string>
    <string name="write_rationale">EhViewer will request WRITE_EXTERNAL_STORAGE permission for downloading gallery. Do you want to grant the permission?</string>
    <string name="you_rejected_me">It hurts</string>
    <string name="gemini_base_url">API Base URL</string>
    <string name="gemini_model_select">Model</string>
    <string name="gemini_model_custom">Custom Model</string>
    <string name="gemini_common_prompt">Prompt</string>
    <string name="gemini_api_key">API Key</string>
</resources>