<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="translation_base_host"
        android:title="@string/translation_base_host"
        app:allowDividerAbove="true" />

    <Preference
        android:key="translation_base_port"
        android:title="@string/translation_base_port"
        app:allowDividerAbove="true" />

    <Preference
        android:key="translation_test_connection"
        android:title="@string/translation_config_test"
        app:allowDividerAbove="true" />

    <Preference
        android:key="gemini_base_url"
        android:title="@string/gemini_base_url"
        app:allowDividerAbove="true" />

    <com.hippo.preference.ListPreference
        android:defaultValue="default"
        android:key="gemini_model_select"
        android:summary="%s"
        android:title="@string/gemini_model_select"
        app:allowDividerAbove="true"
        app:entries="@array/gemini_model_entries"
        app:entryValues="@array/gemini_model_entry_values" />

    <Preference
        android:key="gemini_api_key"
        android:title="@string/gemini_api_key"
        app:allowDividerAbove="true" />

    <Preference
        android:key="gemini_model_custom"
        android:title="@string/gemini_model_custom"
        app:allowDividerAbove="true" />

    <Preference
        android:key="gemini_common_prompt"
        android:title="@string/gemini_common_prompt"
        app:allowDividerAbove="true" />

</PreferenceScreen>
